# CrackQL

./: .gitignore  CrackQL.py  LICENSE  Pipfile  README.md  Readme.md  config.py  pyproject.toml  requirements.txt
lib/: common.py  generator.py  helpers.py  parser.py  parsers.py  payloads.py  validations.py  verifications.py
sample-inputs/: usernames_and_passwords.csv  users-and-passwords.csv  users_and_passwords.csv
sample-queries/: enumeration.graphql.md  idor.graphql.md  login.graphql  otp-bypass.graphql.md
